fix[exporter]: cleanup of pending messages